src/objects/Server__c.object
<CustomObject>
    <fields>
        <fullName>Power_Down__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Power Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_LeveL__c</fullName>
        <label>Power LeveL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_ID__c</fullName>
        <label>Server ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Server</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sever Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>